AWS/baseVPC_template_devops.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Base-VPC-Template",
    "Parameters": {
        "CidrBlockParameter": {
            "Type": "String",
            "Default": "10.0.0.0/16",
            "Description": "Define the CIDR Block for the VPC."
        },
        "PubSubCiderBlock1": {
            "Type": "String",
            "Default": "10.0.0.0/20",
            "Description": "Define the CIDR Block for the Public Subnet of your VPC."
        },
        "PubSubCiderBlock2": {
            "Type": "String",
            "Default": "10.0.32.0/20",
            "Description": "Define the CIDR Block for the Public Subnet of your VPC."
        },
        "PubSubCiderBlock3": {
            "Type": "String",
            "Default": "10.0.64.0/20",
            "Description": "Define the CIDR Block for the Public Subnet of your VPC."
        },
        "PrivateSubCiderBlock1": {
            "Type": "String",
            "Default": "10.0.16.0/21",
            "Description": "Define the CIDR Block for the Private App Subnet of your VPC."
        },
        "PrivateSubCiderBlock2": {
            "Type": "String",
            "Default": "10.0.48.0/21",
            "Description": "Define the CIDR Block for the Private App Subnet of your VPC."
        },
        "PrivateSubCiderBlock3": {
            "Type": "String",
            "Default": "10.0.80.0/21",
            "Description": "Define the CIDR Block for the Private App Subnet of your VPC."
        },
        "PrivateDbSubCiderBlock1": {
            "Type": "String",
            "Default": "10.0.24.0/22",
            "Description": "Define the CIDR Block for the Private App Subnet of your VPC."
        },
        "PrivateDbSubCiderBlock2": {
            "Type": "String",
            "Default": "10.0.56.0/22",
            "Description": "Define the CIDR Block for the Private App Subnet of your VPC."
        },
        "PrivateDbSubCiderBlock3": {
            "Type": "String",
            "Default": "10.0.88.0/22",
            "Description": "Define the CIDR Block for the Private App Subnet of your VPC."
        },
        "Project": {
            "Description": "Project name associated with the VPC",
            "Type": "String",
            "Default": "DevOps"
        },
        "AvailabilityZone1": {
            "Description": "Availability Zone within the region to place half of the subnets",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "AvailabilityZone2": {
            "Description": "Availability Zone within the region to place the other half of the subnets",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "AvailabilityZone3": {
            "Description": "Availability Zone within the region to place half of the subnets",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        }
    },
    "Resources": {
        "projectVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "CidrBlockParameter"
                },
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-VPC"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Project",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "projectPubSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PubSubCiderBlock1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Public-1A"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone1"
                }
            }
        },
        "projectPubSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PubSubCiderBlock2"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Public-1B"
                                ]
                            ]
                        }
                        
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone2"
                }
            }
        },
         "projectPubSubnet3": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PubSubCiderBlock3"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Public-1C"
                                ]
                            ]
                        }
                        
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone3"
                }
            }
        },
        "projectPublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "projectVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Public"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "projectPrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateSubCiderBlock1"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Private-1A"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectPrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateSubCiderBlock2"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone2"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Private-1B"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
         "projectPrivateSubnet3": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateSubCiderBlock3"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone3"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Private-1C"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectDbPrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateDbSubCiderBlock1"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-DB-1A"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectDbPrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateDbSubCiderBlock2"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone2"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-DB-1B"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectDbPrivateSubnet3": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Ref": "PrivateDbSubCiderBlock3"
                },
                "AvailabilityZone": {
                    "Ref": "AvailabilityZone3"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-DB-1C"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectPrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "projectVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
                                    "-Private"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "projectPublicSubRouteTableAssociation1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectPubSubnet1"
                }
            }
        },
        "projectPublicSubRouteTableAssociation2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectPubSubnet2"
                }
            }
        },
        "projectPublicSubRouteTableAssociation3": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectPubSubnet3"
                }
            }
        },
        "projectPrivateSubRouteTableAssociation1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectPrivateSubnet1"
                }
            }
        },
        "projectPrivateSubRouteTableAssociation2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectPrivateSubnet2"
                }
            }
        },
        "projectPrivateSubRouteTableAssociation3": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectPrivateSubnet3"
                }
            }
        },
        "projectPrivateSubRouteTableAssociation4": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectDbPrivateSubnet1"
                }
            }
        },
        "projectPrivateSubRouteTableAssociation5": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectDbPrivateSubnet2"
                }
            }
        },
        "projectPrivateSubRouteTableAssociation6": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "SubnetId": {
                    "Ref": "projectDbPrivateSubnet3"
                }
            }
        },
        "projectInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "DependsOn": "projectVPC",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
    
                                    " IGW"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "projectIGWAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "DependsOn": "projectInternetGateway",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "projectInternetGateway"
                },
                "VpcId": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectPublicRoute1": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "projectInternetGateway",
                "projectIGWAttachment"
            ],
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "projectInternetGateway"
                },
                "RouteTableId": {
                    "Ref": "projectPublicRouteTable"
                }
            }
        },
        "projectPrivateRoute1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "projectPrivateRouteTable"
                },
                "NatGatewayId": {
                    "Ref": "projectNatGateway"
                }
            },
            "DependsOn": "projectNatGateway"
        },
        "projectEIP": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": "projectIGWAttachment",
            "Properties": {
                "Domain": {
                    "Ref": "projectVPC"
                }
            }
        },
        "projectNatGateway": {
            "Type": "AWS::EC2::NatGateway",
            "DependsOn": "projectEIP",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "projectEIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "projectPubSubnet1"
                },
                "Tags": [
                    {
                        "Key": "Project",
                        "Value": {
                            "Ref": "Project"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref": "Project"
                                    },
    
                                    " NatGatway"
                                ]
                            ]
                        }
                    }
                ]
            }
        }
    },

    "Outputs": {
        "VPC": {
            "Description": "VPC ID",
            "Value": {
                "Ref": "projectVPC"
            }
        },
        "InternetGateway": {
            "Description": "Internet Gateway",
            "Value": {
                "Ref": "projectInternetGateway"
            }
        },
        "NatGateway": {
            "Description": "NAT Gateway",
            "Value": {
                "Ref": "projectNatGateway"
            }
        },
        "Subnets": {
            "Description": "Subnets for use in other templates",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "Public:",
                        {
                            "Ref": "projectPubSubnet1"
                        },
                        ",",
                        {
                            "Ref": "projectPubSubnet2"
                        },
                        ".",
                        "App:",
                        {
                            "Ref": "projectPrivateSubnet1"
                        },
                        ",",
                        {
                            "Ref": "projectPrivateSubnet2"
                        },
                        "."
                    ]
                ]
            }
        }
    }
  }
